[package]
name = "rage"
version = "0.0.1"
edition = "2018"
description = "web shit for rust age, heavy wip"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]

[dependencies]
matches = "0.1.8"
maplit = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0.80"
stdweb = { git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"] }
futures-preview = "0.3.0-alpha.9"
strum = "0.11.0"
strum_macros = "0.11.0"
