[package]
name = "game-of-life"
version = "0.0.1"
edition = "2018"
description = "game of life example"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]

[dependencies]
lazy_static = "1.1.0"
regex = "1.0.5"
error-chain = "0.12.0"
matches = "0.1.8"
maplit = "1.0.1"
serde = "1.0.79"
serde_derive = "1.0.79"
rand = "0.5.5"
strum = "0.11.0"
strum_macros = "0.11.0"
rage = { path = "../../" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
# lto = true
