[package]
name = "client"
version = "0.0.1"
edition = "2018"
description = "game of life example"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]

[dependencies]
lazy_static = "1"
regex = "1"
error-chain = "0.12"
matches = "0.1"
maplit = "1"
serde = "1"
serde_derive = "1"
serde_cbor = "0.9"
rand = "0.6"
strum = "0.15"
strum_macros = "0.15"
rage = { path = "../../../" }
shared = { path = "../shared" }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
