cargo-features = ["rename-dependency"]

[package]
name = "shared"
version = "0.0.1"
edition = "2018"
description = "game of life example"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.26"
serde_cbor = "0.9.0"
strum = "0.11.0"
strum_macros = "0.11.0"
http = "0.1.13"
