[package]
name = "shared"
version = "0.0.1"
edition = "2018"
description = "game of life example"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_cbor = "0.9"
strum = "0.15"
strum_macros = "0.15"
http = "0.1"
